@@ -1,3 +1,7 @@
+2009-12-23  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug: #13077: Enable Header for FCE's (optional)
+
 2009-12-20  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug: #13067: Missing CSS classes in page module 
